--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.rabbitmq.username=rabbitmq
 spring.rabbitmq.password=rabbitmq
-spring.rabbitmq.addresses=docker.local
+spring.rabbitmq.host=docker.local
+spring.rabbitmq.port=5672
